--- a/Site/Trabalho interdisciplinar - V10/nbproject/project.properties
+++ b/Site/Trabalho interdisciplinar - V10/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jandex-2.1.1.Final.jar=H:\\Trabalho interdisciplinar\\jandex-2.1.1.Final.jar
+file.reference.jandex-2.1.1.Final.jar=D:\\Trabalho interdisciplinar\\jandex-2.1.1.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -70,7 +70,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
