--- a/Site/Trabalho interdisciplinar - V10 - FINAL/nbproject/private/private.properties
+++ b/Site/Trabalho interdisciplinar - V10 - FINAL/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\marco\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31699410607.properties
+file.reference.jandex-2.1.1.Final.jar=G:\\Trabalho interdisciplinar\\jandex-2.1.1.Final.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/marco/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
@@ -6,5 +7,5 @@ j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program 
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome.INTEGRATED
+selected.browser=Chrome
 user.properties.file=C:\\Users\\marco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
