--- a/Site/Trabalho interdisciplinar - V10 - FINAL/nbproject/project.properties
+++ b/Site/Trabalho interdisciplinar - V10 - FINAL/nbproject/project.properties
@@ -10,6 +10,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-html-editor-lib.default-xhtml-public-id=-//W3C//DTD XHTML 1.0 Transitional//EN
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
